fix: fixed margin bottom to make spacing better

--- a/src/components/Home/Team/Team.module.scss
+++ b/src/components/Home/Team/Team.module.scss
@@ -27,6 +27,7 @@
         font-size: 20px;
         font-weight: 500;
         margin-bottom: 2px;
+        margin-bottom: 8px;
         @media (max-width: 700px) {
           font-size: 16px;
         }
